--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
       <!-- Product 1 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="thermostat.jpg" class="card-img-top" alt="Thermostat">
+          <img src=".//images/Digital Programmable Thermostat.png" class="card-img-top" alt="Thermostat">
           <div class="card-body text-center">
             <h5 class="card-title">Digital Programmable Thermostat</h5>
             <p class="card-text">A programmable thermostat to save energy and ensure your HVAC system runs efficiently. Ideal for any home or office setup.</p>
@@ -39,7 +39,7 @@
       <!-- Product 2 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="air-filter.jpg" class="card-img-top" alt="Air Filter">
+          <img src="./images/air filter.jpeg" class="card-img-top" alt="Air Filter">
           <div class="card-body text-center">
             <h5 class="card-title">MERV 8 Air Filter</h5>
             <p class="card-text">Ensure clean airflow and optimal performance with this MERV 8 air filter. Perfect for most HVAC systems.</p>
@@ -51,7 +51,7 @@
       <!-- Product 3 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="fan-motor.jpg" class="card-img-top" alt="Condenser Fan Motor">
+          <img src="./images/Condenser Fan Motor.png" class="card-img-top" alt="Condenser Fan Motor">
           <div class="card-body text-center">
             <h5 class="card-title">Condenser Fan Motor</h5>
             <p class="card-text">A high-performance motor designed to keep your HVAC system running smoothly and efficiently in all weather conditions.</p>
@@ -63,7 +63,7 @@
       <!-- Product 4 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="air-conditioner.jpg" class="card-img-top" alt="Air Conditioner">
+          <img src="images/High-Efficiency Air Conditioner.png" class="card-img-top" alt="Air Conditioner">
           <div class="card-body text-center">
             <h5 class="card-title">High-Efficiency Air Conditioner</h5>
             <p class="card-text">Keep your space cool with this energy-efficient air conditioner designed for all seasons.</p>
@@ -75,7 +75,7 @@
       <!-- Product 5 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="heating-element.jpg" class="card-img-top" alt="Heating Element">
+          <img src="images/heatingandcooling.jpeg" class="card-img-top" alt="Heating Element">
           <div class="card-body text-center">
             <h5 class="card-title">Heating Element</h5>
             <p class="card-text">Replace your HVAC heating element with this high-performance part for optimal heating efficiency.</p>
@@ -87,7 +87,7 @@
       <!-- Product 6 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="duct-tape.jpg" class="card-img-top" alt="Duct Tape">
+          <img src="images/tape.jpeg" class="card-img-top" alt="Duct Tape">
           <div class="card-body text-center">
             <h5 class="card-title">Heavy-Duty Duct Tape</h5>
             <p class="card-text">Ideal for sealing ductwork, this heavy-duty duct tape ensures a tight seal in all conditions.</p>
