--- a/about.html
+++ b/about.html
@@ -10,14 +10,33 @@
 </head>
 <body onload="hideLoader()">
   <!-- Loader -->
-  <div id="loader" class="loader"></div>
 
   <!-- About Section -->
-  <div class="container my-5">
+
+
+
+
+  <div class="jumbotron text-center" style="height: 800px;" id="intro">
     <h1 class="text-center">Our Story</h1>
-    <p>Reliable HVAC Parts was founded by a family passionate about HVAC. With over 20 years of industry experience, we’ve made it our mission to offer the highest quality HVAC components, from thermostats to compressors.</p>
-    <p>We understand the challenges of finding the right parts, and we're committed to providing an easy, reliable way to shop for everything you need for your HVAC systems. Our team is always here to offer guidance and expert advice.</p>
+    <p>Reliable HVAC Parts was founded by a family passionate about HVAC.< /p>
+      <p></p> With over 20 years of hands-on experience, we saw the need for a reliable online source for quality HVAC parts and accessories. Our mission is to simplify HVAC maintenance for DIYers and professionals alike, combining quality products with expert advice for a seamless shopping experience.</p>
+  
+      <h2 class="text-center">Mission Statement:</h2>
+    <p style="font-style: italic;"><q> To deliver dependable, affordable HVAC parts and accessories that enhance system performance and simplify maintenance.</q> </p>
+    <div id="loader" class="loader"></div>
+    
+
+
+     <h2 class="text-center">Values:</h2>
+    <ol style="color: black;list-style: none;">
+      <li>Customer-Centric Service: Ensuring that our customers receive the products and guidance they need.</li>
+      <li>Integrity: Honesty in pricing and transparency in every transaction.</li>
+      <li>Quality Assurance: Providing reliable parts that meet industry standards.</li>
+      <li>Family Commitment: Leveraging each family member’s expertise to deliver excellent service and smooth operations.</li>
+    </ol>
+    <a href="shop.html" class="btn btn-primary btn-lg">go back Shopping</a>
   </div>
+
 
   <!-- Footer -->
   <footer class="text-center py-4">
