--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <div id="loader" class="loader"></div>
 
   <!-- Jumbotron -->
-  <div class="jumbotron text-center" id="intro">
-    <h1 class="display-4">Reliable HVAC Parts, Delivered Right to Your Doorstep</h1>
-    <p class="lead">Welcome to Reliable HVAC Parts, your trusted source for quality HVAC components.</p>
+  <div class="jumbotron text-center" style="height: 600px;" id="intro">
+    <h1 class="display-4" >Reliable HVAC Parts, Delivered Right to Your Doorstep</h1>
+    <p class="lead" style="font-size: x-large; font-weight: bolder;margin-top: 100px;"> your trusted source for quality HVAC components. With over 20 years of industry expertise, <br> we provide customers with high-performance parts and maintenance supplies to keep their systems running efficiently. br Whether you're a DIY enthusiast or a professional technician, we’re here to help you find exactly what you need.</p>
     <hr class="my-4">
     <p>With over 20 years of industry expertise, we provide customers with high-performance parts and maintenance supplies to keep their systems running efficiently.</p>
     <a class="btn btn-primary btn-lg" href="shop.html" role="button">Shop Now</a>
-    <a class="btn btn-secondary btn-lg" href="learn.html" role="button">Learn HVAC Basics</a>
+    <a class="btn btn-secondary btn-lg" href="about.html" role="button">About HVAC </a>
   </div>
 
   <!-- Why Choose Us Section -->
