--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
   <header class="jumbotron text-center" id="hero">
     <h1 class="display-4">High-Quality HVAC Parts Delivered</h1>
     <p class="lead">Keep your HVAC system running smoothly with the best parts and expert support.</p>
-    <a href="index.html" class="btn btn-primary btn-lg">go back</a>
+    <a href="index.html" class="btn btn-primary btn-lg">Go Back</a>
   </header>
 
   <!-- Product Grid Section -->
@@ -27,10 +27,11 @@
       <!-- Product 1 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src=".//images/Digital Programmable Thermostat.png" class="card-img-top" alt="Thermostat">
+          <img src="./images/Digital Programmable Thermostat.png" class="card-img-top" alt="Thermostat">
           <div class="card-body text-center">
             <h5 class="card-title">Digital Programmable Thermostat</h5>
             <p class="card-text">A programmable thermostat to save energy and ensure your HVAC system runs efficiently. Ideal for any home or office setup.</p>
+            <p class="card-description">Made with durable, high-quality materials for long-lasting performance.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Digital Programmable Thermostat', 99.99)">Add to Cart</a>
           </div>
         </div>
@@ -43,6 +44,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">MERV 8 Air Filter</h5>
             <p class="card-text">Ensure clean airflow and optimal performance with this MERV 8 air filter. Perfect for most HVAC systems.</p>
+            <p class="card-description">Engineered to provide superior filtration for better air quality.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('MERV 8 Air Filter', 19.99)">Add to Cart</a>
           </div>
         </div>
@@ -55,6 +57,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Condenser Fan Motor</h5>
             <p class="card-text">A high-performance motor designed to keep your HVAC system running smoothly and efficiently in all weather conditions.</p>
+            <p class="card-description">Built for long-lasting durability and efficient cooling performance.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Condenser Fan Motor', 149.99)">Add to Cart</a>
           </div>
         </div>
@@ -67,6 +70,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">High-Efficiency Air Conditioner</h5>
             <p class="card-text">Keep your space cool with this energy-efficient air conditioner designed for all seasons.</p>
+            <p class="card-description">Provides exceptional cooling performance while minimizing energy consumption.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('High-Efficiency Air Conditioner', 499.99)">Add to Cart</a>
           </div>
         </div>
@@ -79,6 +83,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Heating Element</h5>
             <p class="card-text">Replace your HVAC heating element with this high-performance part for optimal heating efficiency.</p>
+            <p class="card-description">Designed to provide consistent and reliable heat during colder months.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Heating Element', 79.99)">Add to Cart</a>
           </div>
         </div>
@@ -87,10 +92,11 @@
       <!-- Product 6 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="images/tape.jpeg" class="card-img-top" alt="Duct Tape">
+          <img src="images/3066.webp" class="card-img-top" alt="Duct Tape">
           <div class="card-body text-center">
             <h5 class="card-title">Heavy-Duty Duct Tape</h5>
             <p class="card-text">Ideal for sealing ductwork, this heavy-duty duct tape ensures a tight seal in all conditions.</p>
+            <p class="card-description">Strong, durable adhesive that holds up under tough conditions.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Heavy-Duty Duct Tape', 6.99)">Add to Cart</a>
           </div>
         </div>
@@ -99,10 +105,11 @@
       <!-- Product 7 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="air-purifier.jpg" class="card-img-top" alt="Air Purifier">
+          <img src="images/airpurifier.png" class="card-img-top" alt="Air Purifier">
           <div class="card-body text-center">
             <h5 class="card-title">Air Purifier Filter</h5>
             <p class="card-text">Keep your air clean and your HVAC system running smoothly with this air purifier filter.</p>
+            <p class="card-description">Filters harmful particles to maintain healthier indoor air quality.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('Air Purifier Filter', 49.99)">Add to Cart</a>
           </div>
         </div>
@@ -111,15 +118,20 @@
       <!-- Product 8 -->
       <div class="col-md-3 mb-4">
         <div class="card product-card">
-          <img src="hvac-insulation.jpg" class="card-img-top" alt="HVAC Insulation">
+          <img src="images/HVAC Insulation Kit.png" class="card-img-top" alt="HVAC Insulation">
           <div class="card-body text-center">
             <h5 class="card-title">HVAC Insulation Kit</h5>
             <p class="card-text">Ensure your HVAC system operates efficiently with this high-quality insulation kit for ducts and pipes.</p>
+            <p class="card-description">Provides superior insulation for better performance and energy savings.</p>
             <a href="#" class="btn btn-dark btn-lg" onclick="addToCart('HVAC Insulation Kit', 89.99)">Add to Cart</a>
           </div>
         </div>
       </div>
     </div>
+    <div class=" text-center" id="hero">
+      <a href="faq.html" class="btn btn-primary btn-lg">FAQ here</a>
+    </div>
+   
   </section>
 
   <!-- Footer -->
