--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ - Reliable HVAC Parts</title>
+  
+  <!-- Bootstrap and Custom CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
@@ -14,24 +16,97 @@
 
   <!-- FAQ Section -->
   <div class="container my-5">
+
+ 
     <h1 class="text-center">Frequently Asked Questions</h1>
+    <div class=" text-center" style="margin-top: 20px;margin-bottom: 20px;" id="hero">
+      <a href="index.html" class="btn btn-primary btn-lg">go back</a>
+    </div>
     <div class="accordion" id="faqAccordion">
+      <!-- FAQ Item 1 -->
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              How do I know which HVAC part is right for my system?
+              What kinds of HVAC parts do you sell?
             </button>
           </h2>
         </div>
         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqAccordion">
           <div class="card-body">
-            You can refer to your manufacturer’s manual or contact our customer support for assistance in identifying the correct parts.
+            We offer a wide range of HVAC parts, including filters, motors, thermostats, and fan blades, each thoroughly tested for quality and compatibility.
           </div>
         </div>
       </div>
-      <!-- More FAQ items... -->
+
+      <!-- FAQ Item 2 -->
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              How can I make sure I’m ordering the right part?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#faqAccordion">
+          <div class="card-body">
+            Use our online compatibility tool or reach out to our support team for guidance on finding the correct part for your HVAC system.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ Item 3 -->
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h2 class="mb-0">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              What is your return policy?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#faqAccordion">
+          <div class="card-body">
+            We accept returns within 30 days of purchase, provided the item is unused and in its original packaging. Visit our Shipping & Returns page for more details.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ Item 4 -->
+      <div class="card">
+        <div class="card-header" id="headingFour">
+          <h2 class="mb-0">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Do you offer discounts for bulk purchases?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#faqAccordion">
+          <div class="card-body">
+            Yes, we offer bulk order discounts for contractors and HVAC companies. Contact us directly for more information on pricing and terms.
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ Item 5 -->
+      <div class="card">
+        <div class="card-header" id="headingFive">
+          <h2 class="mb-0">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+              How long will my order take to arrive?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#faqAccordion">
+          <div class="card-body">
+            Standard orders are shipped within 3-5 business days, with express options available at checkout for faster delivery.
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class=" text-center" id="hero">
+    <a href="shop.html" class="btn btn-primary btn-lg">continue shopping</a>
   </div>
 
   <!-- Footer -->
@@ -39,5 +114,16 @@
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
 
+  <!-- Bootstrap and Custom JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+
+  <script>
+    // Hide loader after page loads
+    function hideLoader() {
+      document.getElementById('loader').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
