--- a/shipping-returns.html
+++ b/shipping-returns.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <!-- Navigation Bar (You can link this to your main navigation) -->
+  <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,13 +42,13 @@
 
       <h4>Shipping Methods</h4>
       <ul>
-        <li><strong>Standard Shipping:</strong> Delivered within 5-7 business days.</li>
-        <li><strong>Expedited Shipping:</strong> Delivered within 2-3 business days.</li>
-        <li><strong>Overnight Shipping:</strong> Delivered the next business day for urgent orders.</li>
+        <li><strong>Standard Shipping:</strong> Delivered within 5-7 business days. This is our most cost-effective shipping option.</li>
+        <li><strong>Expedited Shipping:</strong> Delivered within 2-3 business days. Ideal for customers who need parts sooner.</li>
+        <li><strong>Overnight Shipping:</strong> Delivered the next business day for urgent orders. Available for select items and locations.</li>
       </ul>
 
       <h4>Processing Time</h4>
-      <p>All orders are processed within 1-2 business days. Orders placed on weekends or holidays will be processed the next business day.</p>
+      <p>All orders are processed within 1-2 business days. Orders placed on weekends or holidays will be processed the next business day. Please note that processing time does not include shipping time.</p>
 
       <h4>Shipping Costs</h4>
       <ul>
@@ -58,7 +58,13 @@
       </ul>
 
       <h4>International Shipping</h4>
-      <p>We currently only offer shipping to the United States and Canada. International shipping is not available at this time.</p>
+      <p>We currently only offer shipping to the United States and Canada. International shipping is not available at this time, but we are working to expand to other regions soon.</p>
+
+      <h4>Tracking Your Order</h4>
+      <p>Once your order has shipped, you will receive a confirmation email with a tracking number. You can use this number to track your shipment on the carrier's website.</p>
+
+      <h4>Shipping Protection</h4>
+      <p>We offer optional shipping protection at checkout for a small fee. This coverage protects your order against damage, loss, or theft during transit. If your order is lost or damaged, we will send a replacement at no additional charge.</p>
     </section>
 
     <hr class="my-5">
@@ -76,48 +82,17 @@
         <li>Items that have been installed or used.</li>
         <li>Items without the original packaging or labels.</li>
         <li>Special-order or custom-made items.</li>
+        <li>Items purchased as final sale (marked as "Clearance" or "Discounted").</li>
       </ul>
 
       <h4>How to Return an Item</h4>
       <p>To initiate a return, follow these simple steps:</p>
       <ol>
-        <li>Contact our customer service team at <strong>support@reliablehvacparts.com</strong> to request a return authorization number.</li>
-        <li>Pack the item securely in its original packaging.</li>
-        <li>Ship the item back to us using a trackable shipping service (we recommend using USPS, UPS, or FedEx).</li>
+        <li>Contact our customer service team at <strong>support@reliablehvacparts.com</strong> to request a return authorization number (RAN).</li>
+        <li>Pack the item securely in its original packaging, including all accessories and paperwork (e.g., manuals, warranty cards).</li>
+        <li>Ship the item back to us using a trackable shipping service (we recommend using USPS, UPS, or FedEx). Please retain the tracking number for your records.</li>
         <li>Once we receive your return, we will process your refund within 3-5 business days.</li>
       </ol>
 
       <h4>Exchanges</h4>
-      <p>If you would like to exchange an item, please follow the same procedure as a return and place a new order for the replacement item once the original item is returned.</p>
-
-      <h4>Refunds</h4>
-      <p>Refunds will be processed to the original payment method once your return is approved. Please note that it may take 3-5 business days for the refund to appear in your account depending on your payment provider.</p>
-    </section>
-
-    <hr class="my-5">
-
-    <!-- Contact Section -->
-    <section id="contact-info">
-      <h2 class="h4">Contact Us</h2>
-      <p>If you have any further questions or concerns regarding shipping or returns, please feel free to reach out to our customer service team:</p>
-      <ul>
-        <li>Email: <strong>support@reliablehvacparts.com</strong></li>
-        <li>Phone: <strong>(123) 456-7890</strong></li>
-        <li>Hours of Operation: Monday – Friday, 9:00 AM – 5:00 PM (EST)</li>
-      </ul>
-    </section>
-  </div>
-
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-4">
-    <div class="container text-center">
-      <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS and dependencies -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
+      <p>If you would like to exchange an item,
