--- a/about.html
+++ b/about.html
@@ -6,41 +6,81 @@
   <title>About Us - Reliable HVAC Parts</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/svg+xml" href="images/engineer.jpeg" />
   <script src="script.js" defer></script>
 </head>
 <body onload="hideLoader()">
-  <!-- Loader -->
-
-  <!-- About Section -->
-
-
-
-
-  <div class="jumbotron text-center" style="height: 800px;" id="intro">
-    <h1 class="text-center">Our Story</h1>
-    <p>Reliable HVAC Parts was founded by a family passionate about HVAC.< /p>
-      <p></p> With over 20 years of hands-on experience, we saw the need for a reliable online source for quality HVAC parts and accessories. Our mission is to simplify HVAC maintenance for DIYers and professionals alike, combining quality products with expert advice for a seamless shopping experience.</p>
   
-      <h2 class="text-center">Mission Statement:</h2>
-    <p style="font-style: italic;"><q> To deliver dependable, affordable HVAC parts and accessories that enhance system performance and simplify maintenance.</q> </p>
-    <div id="loader" class="loader"></div>
+  <!-- Loader Section (optional) -->
+  <!-- <div id="loader" class="loader"></div> -->
+
+  <!-- About Us Jumbotron -->
+  <div class="jumbotron text-center" style="height: 1500px;" id="intro">
+    <h1 class="display-4 text-center">Our Story</h1>
+    <p class="lead">At Reliable HVAC Parts, we’re not just another online retailer—we’re a family-run business with over 20 years of hands-on experience in the HVAC industry. We understand the importance of a well-maintained HVAC system, and we are passionate about providing high-quality parts that make maintenance easier, faster, and more affordable for both DIY enthusiasts and professional technicians.</p>
     
+    <img src="images/team.jpeg" alt="Our Team" style="width: 200px; height: 200px; border: 5px solid burlywood;">
+    <p class="mt-3">Our founders are experienced HVAC professionals, who saw the need for a reliable online source for quality HVAC components. That vision has led us to build a platform where we combine exceptional parts, expert advice, and excellent customer service into one seamless experience.</p>
 
+    <!-- Mission Statement -->
+    <h2 class="text-center mt-5">Our Mission</h2>
+    <p style="font-style: italic;" class="lead"><q>To deliver dependable, affordable HVAC parts and accessories that enhance system performance and simplify maintenance for homeowners and professionals alike.</q></p>
 
-     <h2 class="text-center">Values:</h2>
-    <ol style="color: black;list-style: none;">
-      <li>Customer-Centric Service: Ensuring that our customers receive the products and guidance they need.</li>
-      <li>Integrity: Honesty in pricing and transparency in every transaction.</li>
-      <li>Quality Assurance: Providing reliable parts that meet industry standards.</li>
-      <li>Family Commitment: Leveraging each family member’s expertise to deliver excellent service and smooth operations.</li>
-    </ol>
-    <a href="shop.html" class="btn btn-primary btn-lg">go back Shopping</a>
+    <!-- Values Section -->
+    <h2 class="text-center mt-5">Our Core Values</h2>
+    <div class="row">
+      <div class="col-md-3">
+        <img src="images/customer.png" class="img-fluid" alt="Customer Service" style="height: 200px;">
+        <h4>Customer-Centric Service</h4>
+        <p>We are dedicated to ensuring our customers receive the products, guidance, and care they need to maintain HVAC systems that last.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/integrity.png" class="img-fluid" style="height: 200px;" alt="Integrity">
+        <h4>Integrity</h4>
+        <p>Honesty is the foundation of everything we do. We offer fair prices and ensure transparency in every transaction.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/quality.png
+        " class="img-fluid" style="height: 200px;" alt="Quality">
+        <h4>Quality Assurance</h4>
+        <p>All our parts meet or exceed industry standards, ensuring that our customers can trust the reliability and longevity of every product we sell.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/family.png" class="img-fluid" style="height: 200px;" alt="Family Commitment">
+        <h4>Family Commitment</h4>
+        <p>Each family member brings their expertise to deliver excellent service and smooth operations, making us more than just a business—it’s personal.</p>
+      </div>
+    </div>
+
+    <!-- Testimonials Section (Optional but adds credibility) -->
+    <h2 class="text-center mt-5">What Our Customers Say</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <blockquote class="blockquote text-center">
+          <p class="mb-0">"Reliable HVAC Parts saved me time and money! The parts I ordered fit perfectly, and their customer service helped me make the right choice." – Sarah T.</p>
+        </blockquote>
+      </div>
+      <div class="col-md-4">
+        <blockquote class="blockquote text-center">
+          <p class="mb-0">"I’ve been a professional HVAC technician for 15 years, and I trust Reliable HVAC Parts for all my replacement parts." – James L.</p>
+        </blockquote>
+      </div>
+      <div class="col-md-4">
+        <blockquote class="blockquote text-center">
+          <p class="mb-0">"As a DIYer, I’ve had a great experience shopping with Reliable HVAC. Their product selection and advice made everything easy." – Linda P.</p>
+        </blockquote>
+      </div>
+    </div>
+
+    <!-- Call to Action -->
+    <a href="shop.html" class="btn btn-primary btn-lg mt-4">Start Shopping Now</a>
   </div>
 
-
   <!-- Footer -->
-  <footer class="text-center py-4">
-    <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
+  <footer class="bg-dark text-white py-4">
+    <div class="container text-center">
+      <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
+    </div>
   </footer>
 
 </body>
