--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ - Reliable HVAC Parts</title>
-  
+  <link rel="icon" type="image/svg+xml" href="images/engineer.jpeg" />
   <!-- Bootstrap and Custom CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -107,6 +107,10 @@
 
   <div class=" text-center" id="hero">
     <a href="shop.html" class="btn btn-primary btn-lg">continue shopping</a>
+    
+
+      <a class="btn btn-secondary btn-lg" href="shipping-returns.html" role="button">Shipping And Returns</a>
+
   </div>
 
   <!-- Footer -->
