--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop HVAC Parts - Reliable HVAC Parts</title>
   <!-- Bootstrap and Custom CSS -->
+  <link rel="icon" type="image/svg+xml" href="images/engineer.jpeg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
