--- a/about.html
+++ b/about.html
@@ -13,9 +13,23 @@
   
   <!-- Loader Section (optional) -->
   <!-- <div id="loader" class="loader"></div> -->
-
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="shipping-returns.html">Shipping & Returns</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+</nav>
   <!-- About Us Jumbotron -->
-  <div class="jumbotron text-center" style="height: 1500px;" id="intro">
+  <div class="jumbotron text-center" s id="intro">
     <h1 class="display-4 text-center">Our Story</h1>
     <p class="lead">At Reliable HVAC Parts, we’re not just another online retailer—we’re a family-run business with over 20 years of hands-on experience in the HVAC industry. We understand the importance of a well-maintained HVAC system, and we are passionate about providing high-quality parts that make maintenance easier, faster, and more affordable for both DIY enthusiasts and professional technicians.</p>
     
