--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </div>
 </nav>
   <!-- About Us Jumbotron -->
-  <div class="jumbotron text-center" s id="intro">
+  <div class="jumbotron text-center"  id="intro">
     <h1 class="display-4 text-center">Our Story</h1>
     <p class="lead">At Reliable HVAC Parts, we’re not just another online retailer—we’re a family-run business with over 20 years of hands-on experience in the HVAC industry. We understand the importance of a well-maintained HVAC system, and we are passionate about providing high-quality parts that make maintenance easier, faster, and more affordable for both DIY enthusiasts and professional technicians.</p>
     
