--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="loader" class="loader"></div>
 
   <!-- Jumbotron -->
-  <div class="jumbotron text-center" style="height: 1400px;" id="intro">
+  <div class="jumbotron text-center"  id="intro">
     <h1 class="display-4">Reliable HVAC Parts, Delivered Right to Your Doorstep</h1>
     <div class="text-center" id="hero">
       <img src="images/engineer.jpeg" style="width: 300px;" alt="Engineer">
