--- a/about.html
+++ b/about.html
@@ -10,9 +10,6 @@
   <script src="script.js" defer></script>
 </head>
 <body onload="hideLoader()">
-  
-  <!-- Loader Section (optional) -->
-  <!-- <div id="loader" class="loader"></div> -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +21,16 @@
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="shipping-returns.html">Shipping & Returns</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
 </nav>
+  
+  <!-- Loader Section (optional) -->
+  <!-- <div id="loader" class="loader"></div> -->
+  <!-- Loader -->
+  <div id="loader" class="loader"></div>
+
   <!-- About Us Jumbotron -->
   <div class="jumbotron text-center"  id="intro">
     <h1 class="display-4 text-center">Our Story</h1>
@@ -92,9 +95,11 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
-    <div class="container text-center">
-      <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
-    </div>
+    <section id="contact">
+      <p>Email us @ “Support@reliablehvacparts.com” </p>
+      <q>available Monday -Friday from 09:00 AM to 5:00 PM EST</q>
+    </section>
+    <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
 
 </body>
