--- a/faq.html
+++ b/faq.html
@@ -11,8 +11,7 @@
   <script src="script.js" defer></script>
 </head>
 <body onload="hideLoader()">
-  <!-- Loader -->
-  <div id="loader" class="loader"></div>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +23,17 @@
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="shipping-returns.html">Shipping & Returns</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Shipping & Returns</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
 </nav>
+
+
+
+  <!-- Loader -->
+  <div id="loader" class="loader"></div>
+ 
+
   <!-- FAQ Section -->
   <div class="container my-5">
 
@@ -129,6 +135,10 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
+    <section id="contact">
+      <p>Email us @ “Support@reliablehvacparts.com” </p>
+      <q>available Monday -Friday from 09:00 AM to 5:00 PM EST</q>
+    </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
 
