--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="shipping-returns.html">Shipping & Returns</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
 </nav>
@@ -103,6 +103,10 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
+    <section id="contact">
+      <p>Email us @ “Support@reliablehvacparts.com” </p>
+      <q>available Monday -Friday from 09:00 AM to 5:00 PM EST</q>
+    </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
 
