--- a/shop.html
+++ b/shop.html
@@ -11,23 +11,29 @@
   <script src="script.js" defer></script>
 </head>
 <body onload="hideLoader()">
+
+
+    <!-- Fixed Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="shipping-returns.html">Shipping & Returns</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+  </nav>
+  
+
   <!-- Loader -->
   <div id="loader" class="loader"></div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="shipping-returns.html">Shipping & Returns</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-</nav>
+
   <!-- Jumbotron (Main Hero Section) -->
   <header class="jumbotron text-center" id="hero">
     <h1 class="display-4">High-Quality HVAC Parts Delivered</h1>
@@ -151,6 +157,10 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
+    <section id="contact">
+      <p>Email us @ “Support@reliablehvacparts.com” </p>
+      <q>available Monday -Friday from 09:00 AM to 5:00 PM EST</q>
+    </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
 
