--- a/shipping-returns.html
+++ b/shipping-returns.html
@@ -97,3 +97,11 @@
 
       <h4>Exchanges</h4>
       <p>If you would like to exchange an item,
+
+        <footer class="text-center py-4">
+          <section class="text-center id="contact">
+            <p>Email us @ Support@reliablehvacparts.com</p>
+            <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
+          </section>
+          <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
+        </footer>
