--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
+
+  <!-- Smooth Scroll CSS -->
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body onload="hideLoader()">
 
@@ -26,8 +33,7 @@
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
-</nav>
-
+  </nav>
 
   <!-- Loader -->
   <div id="loader" class="loader"></div>
@@ -103,9 +109,9 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section id="contact">
-      <p>Email us @ “Support@reliablehvacparts.com” </p>
-      <q>available Monday -Friday from 09:00 AM to 5:00 PM EST</q>
+    <section class="text-center id="contact">
+      <p>Email us @ Support@reliablehvacparts.com</p>
+      <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
