--- a/shop.html
+++ b/shop.html
@@ -157,9 +157,9 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section id="contact">
-      <p>Email us @ “Support@reliablehvacparts.com” </p>
-      <q>available Monday -Friday from 09:00 AM to 5:00 PM EST</q>
+    <section class="text-center id="contact">
+      <p>Email us @ Support@reliablehvacparts.com</p>
+      <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
