--- a/about.html
+++ b/about.html
@@ -8,9 +8,16 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/svg+xml" href="images/engineer.jpeg" />
   <script src="script.js" defer></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body onload="hideLoader()">
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <!-- Fixed Navigation Bar -->
+   <!-- Fixed Navigation Bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -24,7 +31,8 @@
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
-</nav>
+  </nav>
+
   
   <!-- Loader Section (optional) -->
   <!-- <div id="loader" class="loader"></div> -->
@@ -95,12 +103,13 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section class="text-center id="contact">
+    <section id="contact"> <!-- Fixed the ID here -->
       <p>Email us @ Support@reliablehvacparts.com</p>
       <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
+
 
 </body>
 </html>
