--- a/faq.html
+++ b/faq.html
@@ -9,10 +9,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body onload="hideLoader()">
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+   <!-- Fixed Navigation Bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,7 +31,8 @@
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
-</nav>
+  </nav>
+
 
 
 
@@ -135,12 +141,13 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section class="text-center id="contact">
+    <section id="contact"> <!-- Fixed the ID here -->
       <p>Email us @ Support@reliablehvacparts.com</p>
       <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
+
 
   <!-- Bootstrap and Custom JavaScript -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
