--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body onload="hideLoader()">
 
-  <!-- Fixed Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+   <!-- Fixed Navigation Bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -109,7 +109,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section class="text-center id="contact">
+    <section id="contact"> <!-- Fixed the ID here -->
       <p>Email us @ Support@reliablehvacparts.com</p>
       <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
