--- a/shipping-returns.html
+++ b/shipping-returns.html
@@ -12,10 +12,17 @@
   <link rel="stylesheet" href="styles.css">
 
   <script src="script.js" defer></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <!-- Fixed Navigation Bar -->
+   <!-- Fixed Navigation Bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -29,7 +36,9 @@
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
-</nav>
+  </nav>
+
+  
 
 
   <!-- Main Content Section -->
@@ -99,9 +108,10 @@
       <p>If you would like to exchange an item,
 
         <footer class="text-center py-4">
-          <section class="text-center id="contact">
+          <section id="contact"> <!-- Fixed the ID here -->
             <p>Email us @ Support@reliablehvacparts.com</p>
             <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
           </section>
           <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
         </footer>
+      
