--- a/shop.html
+++ b/shop.html
@@ -9,6 +9,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body onload="hideLoader()">
 
@@ -28,9 +33,8 @@
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
-  </nav>
+    </nav>
   
-
   <!-- Loader -->
   <div id="loader" class="loader"></div>
 
@@ -157,12 +161,13 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section class="text-center id="contact">
+    <section id="contact"> <!-- Fixed the ID here -->
       <p>Email us @ Support@reliablehvacparts.com</p>
       <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
+
 
   <script>
     // Function to add items to the cart
