--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
   </style>
 </head>
 <body onload="hideLoader()">
+  
   <!-- Fixed Navigation Bar -->
-   <!-- Fixed Navigation Bar -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Reliable HVAC Parts</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,14 +33,12 @@
     </div>
   </nav>
 
-  
   <!-- Loader Section (optional) -->
   <!-- <div id="loader" class="loader"></div> -->
-  <!-- Loader -->
   <div id="loader" class="loader"></div>
 
   <!-- About Us Jumbotron -->
-  <div class="jumbotron text-center"  id="intro">
+  <div class="jumbotron text-center" id="intro">
     <h1 class="display-4 text-center">Our Story</h1>
     <p class="lead">At Reliable HVAC Parts, we’re not just another online retailer—we’re a family-run business with over 20 years of hands-on experience in the HVAC industry. We understand the importance of a well-maintained HVAC system, and we are passionate about providing high-quality parts that make maintenance easier, faster, and more affordable for both DIY enthusiasts and professional technicians.</p>
     
@@ -65,8 +63,7 @@
         <p>Honesty is the foundation of everything we do. We offer fair prices and ensure transparency in every transaction.</p>
       </div>
       <div class="col-md-3">
-        <img src="images/quality.png
-        " class="img-fluid" style="height: 200px;" alt="Quality">
+        <img src="images/quality.png" class="img-fluid" style="height: 200px;" alt="Quality">
         <h4>Quality Assurance</h4>
         <p>All our parts meet or exceed industry standards, ensuring that our customers can trust the reliability and longevity of every product we sell.</p>
       </div>
@@ -103,13 +100,17 @@
 
   <!-- Footer -->
   <footer class="text-center py-4">
-    <section id="contact"> <!-- Fixed the ID here -->
+    <section id="contact">
       <p>Email us @ Support@reliablehvacparts.com</p>
       <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
     </section>
     <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
   </footer>
 
+  <!-- Include jQuery, Popper.js, and Bootstrap JS for the mobile navbar to work -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
