--- a/shipping-returns.html
+++ b/shipping-returns.html
@@ -38,9 +38,6 @@
     </div>
   </nav>
 
-  
-
-
   <!-- Main Content Section -->
   <div class="container my-5">
     <h1 class="text-center mb-4">Shipping & Return Policy</h1>
@@ -105,13 +102,23 @@
       </ol>
 
       <h4>Exchanges</h4>
-      <p>If you would like to exchange an item,
+      <p>If you would like to exchange an item for a different size, color, or model, please follow the same return process above. Once we receive your returned item, we will send the replacement at no additional charge. Please note that exchanges are subject to product availability.</p>
+    </section>
+  </div>
 
-        <footer class="text-center py-4">
-          <section id="contact"> <!-- Fixed the ID here -->
-            <p>Email us @ Support@reliablehvacparts.com</p>
-            <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
-          </section>
-          <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
-        </footer>
-      
+  <!-- Footer -->
+  <footer class="text-center py-4">
+    <section id="contact">
+      <p>Email us @ Support@reliablehvacparts.com</p>
+      <q>Available Monday - Friday from 09:00 AM to 5:00 PM EST</q>
+    </section>
+    <p>&copy; 2024 Reliable HVAC Parts. All Rights Reserved.</p>
+  </footer>
+
+  <!-- Include jQuery, Popper.js, and Bootstrap JS for the mobile navbar to work -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+
+</body>
+</html>
