--- a/cart.html
+++ b/cart.html
@@ -27,6 +27,29 @@
       color: red;
       font-size: 1.1rem;
     }
+    /* Style for the pop-up message */
+    #popup-message {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+    }
+    .popup-content {
+      background: white;
+      padding: 20px;
+      border-radius: 5px;
+      max-width: 400px;
+      text-align: center;
+    }
+    .popup-content button {
+      margin-top: 15px;
+    }
   </style>
 </head>
 <body>
@@ -74,9 +97,18 @@
       <p><strong>Total Items:</strong> <span id="cart-item-count">0</span></p>
       <p><strong>Grand Total:</strong> $<span id="cart-total">0.00</span></p>
       <button class="btn btn-warning" onclick="clearCart()">Clear Cart</button>
-      <button class="btn btn-primary" onclick="window.location.href='shop.html'">Continue Shopping</button>
+      <button class="btn btn-primary" onclick="showPopup()">Continue Shopping</button>
     </div>
   </section>
+
+  <!-- Pop-up Message -->
+  <div id="popup-message">
+    <div class="popup-content">
+      <h4>Sorry, we can't accept orders right now.</h4>
+      <p>Please contact or mail us to complete your purchase.</p>
+      <button class="btn btn-danger" onclick="closePopup()">Close</button>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="text-center py-4">
@@ -170,6 +202,16 @@
     function clearCart() {
       localStorage.removeItem('cart');  // Remove cart from localStorage
       displayCart();  // Update the cart display
+    }
+
+    // Function to show the popup message
+    function showPopup() {
+      document.getElementById('popup-message').style.display = 'flex';  // Show the pop-up
+    }
+
+    // Function to close the popup message
+    function closePopup() {
+      document.getElementById('popup-message').style.display = 'none';  // Hide the pop-up
     }
   </script>
 
